--- a/pages/MotoGP™.html
+++ b/pages/MotoGP™.html
@@ -26,21 +26,51 @@
         <div class="hero-content">
             <h1>Bienvenue dans le monde du Moto GP</h1>
             <p>Découvrez l'univers palpitant des courses de moto</p>
-            <a href="#about" class="btn">En savoir plus</a>
         </div>
     </header>
 
 
+    <!-- Section Hero -->
+    <header class="hero">
+        <h1 id="neon-title">Bienvenue dans l'univers du Moto GP</h1>
+        <p class="typewriter" id="dynamic-text"></p>
+    </header>
 
+    <!-- Section Pilotes -->
+    <section id="pilotes">
+        <h2 class="neon">Les Pilotes de Moto GP</h2>
+        <div class="pilotes-grid">
+            <!-- Exemple de présentation d'un pilote -->
+            <div class="pilote-card">
+                <img src="../assets/Marc Marquez.jpg" alt="Pilote 1">
+                <h3>Marc Marquez</h3>
+                <p><strong>Numero:</strong>93</p>
+                <p><strong>Équipe:</strong> Gresini Racing</p>
+                <p><strong>Nombre de titres:</strong> 8 fois Champion du Monde</p>
+                <p><strong>Moto:</strong> Ducati </p>
+                <p><strong>Combinaison:</strong> Alpinestars</p>
+            </div>
 
+            <div class="pilote-card">
+                <img src="../assets/Valentino Rossi.jpg" alt="Pilote 2">
+                <h3>Valentino Rossi</h3>
+                <p><strong>Équipe:</strong> Yamaha</p>
+                <p><strong>Nombre de titres:</strong> 9 fois Champion du Monde</p>
+                <p><strong>Moto:</strong> Yamaha YZR-M1</p>
+                <p><strong>Combinaison:</strong> Dainese</p>
+            </div>
 
-
-
-
-
-
-
-    
+            <div class="pilote-card">
+                <img src="../assets/Fabio Quartararo.jpg" alt="Pilote 3">
+                <h3>Fabio Quartararo</h3>
+                <p><strong>Équipe:</strong> Monster Yamaha</p>
+                <p><strong>Nombre de titres:</strong> 1 fois Champion du Monde</p>
+                <p><strong>Moto:</strong> Yamaha YZR-M1</p>
+                <p><strong>Combinaison:</strong> Alpinestars</p>
+            </div>
+            <!-- Ajouter d'autres pilotes de manière similaire -->
+        </div>
+    </section>
 
     <!-- Pied de page -->
     <footer>
