--- a/pages/MotoGP™.html
+++ b/pages/MotoGP™.html
@@ -15,8 +15,8 @@
             <li class="nav-item" data-moto="moto2"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
             <li class="nav-item" data-moto="moto3"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
             <li class="nav-item" data-moto="moto4"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
-            <li class="nav-item" data-moto="moto5"><a class="nav-link active" aria-current="page" href="MotoGP™.html">MotoGP™ <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
-            <li class="nav-item" data-moto="moto6"><a class="nav-link active" aria-current="page" href="#"># <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
+            <li class="nav-item" data-moto="moto5"><a class="nav-link active" aria-current="page" href="MotoGP™.html">MotoGP™ 
+            <li class="nav-item" data-moto="moto6"><a class="nav-link active" aria-current="page" href="#"># 
             <li class="nav-item" data-moto="moto7"><a class="nav-link active" aria-current="page" href="plus.html">Plus</a></li>
             <li class="nav-item" data-moto="moto8"><a class="nav-link active" aria-current="page" href="parck.html">Parc</a></li>            
         </ul>
