--- a/pages/MotoGP™.html
+++ b/pages/MotoGP™.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     <!-- Section Hero -->
-    <header class="hero">
+    <header class="heroo">
         <div class="hero-content">
             <h1>Bienvenue dans le monde du Moto GP</h1>
             <p>Découvrez l'univers palpitant des courses de moto</p>
@@ -38,7 +38,7 @@
 
     <!-- Section Pilotes -->
     <section id="pilotes">
-        <h2 class="neon">Les Pilotes de Moto GP</h2>
+        <h2 class="neon">Les Pilotes et legende de se sport</h2>
         <div class="pilotes-grid">
             <!-- Exemple de présentation d'un pilote -->
             <div class="pilote-card">
